src/objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Physical</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Street__c &amp; &apos;, &apos; &amp; City__c &amp; &apos;, &apos; &amp; State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Address_Relationship__c</fullName>
        <description>Count of all Address Relationships for this Address.</description>
        <label>Count Address Relationship</label>
        <summaryForeignKey>Address_Relationship__c.Address__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <description>All address fields concatenated (Street, City, State, Country, ZIP).</description>
        <formula>Street__c  &amp; &apos; &apos; &amp;  City__c &amp; &apos;, &apos; &amp;  State__c &amp; &apos; &apos; &amp;  Country__c &amp; &apos;, &apos; &amp;  Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LM_MASTER_SKEY__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MDM Location Key</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mark_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marked for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>Addresses_Created_via_Integration</fullName>
        <columns>LM_MASTER_SKEY__c</columns>
        <columns>NAME</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip__c</columns>
        <columns>Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Admin</value>
        </filters>
        <label>Addresses Created via Integration</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>LM_MASTER_SKEY__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>State__c</columns>
        <columns>Street__c</columns>
        <columns>Zip__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Malformed_state_code</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
LEN(State__c) &lt;&gt; 2 &amp;&amp;
NOT(
CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:&quot; &amp;
&quot;IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:&quot; &amp;
&quot;NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:&quot; &amp;
&quot;WA:WV:WI:WY:PR:AB:BC:MB:NB:NL:NT:NS:NU:ON:PC:QC:SK:YT&quot;, State__c)
),
$Profile.Name &lt;&gt; &quot;VSP Technical User&quot;)</errorConditionFormula>
        <errorMessage>Please enter a valid 2 digit US State or Canadian code</errorMessage>
    </validationRules>
</CustomObject>